[package]
name = "syncode"
version = "0.1.0"
authors = ["Preston Firestone"]
edition = "2021"
description = "Implements the Syncode algorithm in Rust."

[lib]
name = "rust_syncode"
crate-type = ["cdylib"]

[dependencies]
regex-automata = "0.4.9"
itertools = "0.8.2"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
