[package]
name = "syncode"
version = "0.1.0"
authors = ["Preston Firestone"]
edition = "2021"
description = "Implements the Syncode algorithm in Rust."

[lib]
name = "rust_syncode"
crate-type = ["cdylib"]

[dependencies]
regex-automata = "0.4.9"
lrtable = "0.13.8"
lrlex = "0.13.8"
lrpar = "0.13.8"
cfgrammar = "0.13.8"
regex = "1.11.1"

[profile.release]
debug = true

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module"]
