[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncode"
version="0.4.3"
requires-python = ">=3.6,<3.13"
description = "Grammar-guided code generation tool"
readme = "README.md"
authors = [
    {name = "Shubham Ugare", email = "shubhamugare@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fire",
    "interegular",
    "regex==2023.8.8",
    "torch",
    "tqdm",
    "transformers==4.44.0",
    "datasets",
    "jsonschema",
]

[project.urls]
"Homepage" = "https://github.com/shubhamugare/syncode"
"Bug Tracker" = "https://github.com/shubhamugare/syncode/issues"